# discovery-agents

./: .gitignore  README.md  __init__.py  agent_base.py  agents.py  cli.py  models.py  pyproject.toml  render.py
src/discovery_agents/: __init__.py  cli.py  pipeline.py  sample_data.py
src/discovery_agents/agents/: __init__.py  _utils.py  canvas.py  critique.py  eval.py  evidence_insight.py  handoff.py  ideation.py  memory.py  selection.py  strategy.py
tests/: test_pipeline.py
